fixing timeline align

--- a/oktansite/static/oktan/css/creative.css
+++ b/oktansite/static/oktan/css/creative.css
@@ -382,6 +382,7 @@ CSS for Timeline line
     list-style: none;
     padding: 20px 0 20px;
     position: relative;
+    margin: 0 auto;
 }
 
     .timeline:before {
